# bleu-evaluator

./: .gitignore  README.md  pyproject.toml  tox.ini
bleu_evaluator/: __init__.py  __main__.py  bleu.py  cli.py  compat.py  fib.py  log.py  parse.py  read.py  scan.py  utils.py
bleu_evaluator/bleu/: __init__.py  compute.py  score.py  stats.py
data/: ref.txt  test.docx
data/set_1/: hyp_1_1_MTmedicineyandex (1).txt  hyp_1_2_MTmedicinedeep.txt  ref_1_MTmedicine.txt
data/set_2/: hyp_1.txt  ref_1.txt  ref_2.txt
scripts/: test-set_1.sh
tests/: test_bleu.py  test_utils.py
