[tool.poetry]
name = "bleu-evaluator"
version = "0.1.0"
description = ""
authors = ["vancomm <peshekhonov.ip@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8.1"
click = "^8.1.7"
docx2txt = "^0.8"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bleu = "bleu_evaluator:cli"
