[tool.poetry]
name = "bleu-evaluator"
version = "0.1.0"
description = ""
authors = ["vancomm <peshekhonov.ip@gmail.com>"]
repository = "https://github.com/vancomm/bleu-evaluator"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.8.1"
click = "^8.1.7"
docx2txt = "^0.8"
numpy = "^1.26.2"
pypdf = "^3.17.2"
typing-extensions = "^4.9.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"
pytest = "^7.4.3"
mypy = "^1.8.0"
black = "^23.12.1"
tox = "^4.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bleu = "bleu_evaluator:cli"

# [tool.mypy]
# strict = true

[[tool.mypy.overrides]]
module = ["nltk", "docx2txt"]
ignore_missing_imports = true
